books_information/books_information_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-information
  labels:
    app: books-information
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-information
  template:
    metadata:
      labels:
        app: books-information
    spec:
      containers:
        - name: books-information
          image: andrei8080/books_information:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: books-information-service
spec:
  selector:
    app: books-information
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
